--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ cursive = "0.10"
 failure = "0.1"
 itertools = "0.8"
 lazy_static = "1.2"
-smeagol = { path = "../smeagol" }
+smeagol = "0.1"
 term_size = "0.3"
 
 [patch.crates-io]
